--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@ui/*": ["src/components/ui/*"]
+      /* "@utils/*": ["src/utils*"] */
     }
   }
 }
