--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.2.3",
     "astro": "^5.1.9",
     "astro-icon": "^1.1.5",
     "sass": "^1.85.1"
