--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^6.2.3",
+    "@astrojs/rss": "^4.0.11",
     "astro": "^5.1.9",
     "astro-icon": "^1.1.5",
     "sass": "^1.85.1"
